--- a/src/HPlaneWGSimulatorXDelFEM/ver1.x.x.x/HPlaneWGSimulatorXDelFEM/HPlaneWGSimulatorXDelFEM/ReleaseNotes.txt
+++ b/src/HPlaneWGSimulatorXDelFEM/ver1.x.x.x/HPlaneWGSimulatorXDelFEM/HPlaneWGSimulatorXDelFEM/ReleaseNotes.txt
@@ -1,4 +1,29 @@
 ﻿HPlaneWGSimulatorXDelFEM Release Notes
+version1.6.0.0
+---(2012-11-24)
+  通常版の機能をマージ
+  ●E面導波管、平行平板TMの計算ができます。
+  平行平板 TE/TM
+    両端を電気壁で遮蔽した平行平板導波路の解析を追加しました。
+    TEはH面導波管と同じ定式化となります。
+    TMは今回追加した定式化です。
+  E面導波管TE
+    LSEモード(E面に垂直な電界が０)としてTEモードの定式化を行いました。
+    まだ定式化にバグがあるかもしれませんが試作機能として追加しています。
+
+  ●散乱係数周波数特性の対数グラフ
+  ●自動計算モード
+  ●等高線図
+  等高線図の種類を追加しました。表示できる分布図は次の４つになりました。
+    |Ez|分布図 (従来のもの)
+    Ez実数部の分布図 (新規)
+    Hベクトルのベクトル表示
+    複素ポインティングベクトルのベクトル表示
+    (おまけ）４画面表示
+    ※ベクトル表示は、ダブルクリックしてパネルを最大化しないとまともに見れないかもしれません。
+
+---(2012-11-20)
+  回転界のバグ修正
 
 version1.0.0.4
 ---(2012-10-31)
