--- a/src/HPlaneWGSimulatorXDelFEM/ver1.x.x.x/HPlaneWGSimulatorXDelFEM/HPlaneWGSimulatorXDelFEM/ReleaseNotes.txt
+++ b/src/HPlaneWGSimulatorXDelFEM/ver1.x.x.x/HPlaneWGSimulatorXDelFEM/HPlaneWGSimulatorXDelFEM/ReleaseNotes.txt
@@ -1,4 +1,16 @@
 ﻿HPlaneWGSimulatorXDelFEM Release Notes
+
+version1.6.0.3
+---(2012-12-19)
+  DelFEM4Net.dll更新(DelFEM本体修正)
+
+---(2012-12-17)
+  Lisys CLW.dll更新
+    KrdLab.clapack.FunctionExt.zgbsv 複素エルミート帯行列用一般化固有値問題解法 追加
+    現在未使用
+  BUGFIX
+    MyCmplexBandMatrix(未使用のコンストラクタにバグがあったので修正)
+
 version1.6.0.2
 ---(2012-12-03)
   パーツ移動変更
