--- a/src/HPlaneWGSimulatorXDelFEM/ver1.x.x.x/HPlaneWGSimulatorXDelFEM/HPlaneWGSimulatorXDelFEM/ReleaseNotes.txt
+++ b/src/HPlaneWGSimulatorXDelFEM/ver1.x.x.x/HPlaneWGSimulatorXDelFEM/HPlaneWGSimulatorXDelFEM/ReleaseNotes.txt
@@ -1,5 +1,10 @@
 ﻿HPlaneWGSimulatorXDelFEM Release Notes
 
+version1.6.0.6
+  伝搬定数周波数特性　複数モード対応
+  モード分布 複数モード対応
+   BUGFIX: 1.6.0.5で「メッシュを見る」を実行時、計算データがクリアされていたのをされないように修正
+
 version1.6.0.5
 ---(2013-07-25)
   散乱係数周波数特性　複数モード対応
